adding model and seeds folder

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -5,6 +5,8 @@
           <h1>My Blog's</h1>
         </div>
         <div>
+          <h3>
+
            <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -20,10 +22,14 @@
           </li>
          
         </ul>
+                  </h3>
+
         </div>
        
         
         </div>
+        <hr style="height: 10px;">
+        {{!-- {{description}} --}}
 
       
     </header>
