--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
         <a href="/dashboard">dashboard</a>
     <a href="/signin">sigin</a>
         <a href="/signup">signup</a>
-            <a href="#">logout</a>
+            <a href="/logout">logout</a>
 
 
 
