--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -5,7 +5,7 @@
 
   <div class="container">
     <label for="uname"><b>Email</b></label>
-    <input type="text"  id="emailEl" placeholder="Enter email" name="uname" required>
+    <input type="email"  class="form-control" id="emailEl" placeholder="Enter email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" id="passwordEl" placeholder="Enter Password" name="psw" required>
