--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,7 +7,7 @@
     <input type="text" placeholder="Enter Username" id="usernameF">
     <label for="email"><b>Email</b></label>
 
-    <input type="text" placeholder="Enter Email" name="email" required id="emailF">
+    <input type="email"  class="form-control" placeholder="Enter Email" name="email" required id="emailF">
 
      <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required id="passwordF" minlength="8">
