--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,7 +6,7 @@
  
   <p class="card-body" style="font-size: 10px; color:cornflowerblue">posted By:{{info.user.username}}</p>
 {{post.comment.comment}}
-    <a href="/post/{{info.id}}" class="btn btn-primary">{{info.id}}</a>
+    <a href="/post/{{info.id}}" class="btn btn-primary">add comment</a>
   </div>
 </div>
 
