--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,8 @@ button:hover {
 @media screen and (max-width: 500px) {
   
   .aside{
-    display: none;
+    background-color: lightsalmon;
+    max-width: 200px;
   }
 }
 
