--- a/views/onepost.handlebars
+++ b/views/onepost.handlebars
@@ -7,8 +7,7 @@
  
   <p class="card-body" style="font-size: 10px; color:cornflowerblue">posted By:{{post.user.username}}</p>
   </div>
-  <hr>
-<table class="table table-success table-striped">
+{{!-- <table class="table table-success table-striped">
   <thead>
     <tr>
       <th scope="col">comment</th>
@@ -29,7 +28,7 @@
 
  
   </tbody>
-</table>
+</table> --}}
 
 
 
