--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,10 +41,13 @@
     <aside class="aside">
       <h2>Enjoy and post your Openions 🙃!!!</h2>
     </aside>
-    <div class="gallery">
-      {{{body}}}
+    <div class="card-body">
+            {{{body}}}
+
+
     </div>
   </main>
+
 </body>
 
 </html>
