--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,11 @@
 {{#each Infos as |info|}}
-<div class="card  card-secondary">
+<div class="card  bg-light">
 
   <div class="d-flex  card-header">
       <h7 class="card-header ">{{info.title}} </h7>
-          <p class="card-body" style="font-size: 10px; color:cornflowerblue">posted By:{{info.user.username}}</p>
 
+          <p class="card-body" style="font-size: 10px; color:cornflowerblue">posted By:{{info.user.username}}</p>
+<p> {{formatData info.createdAt}}</p>
 
   </div>
 
@@ -12,13 +13,16 @@
     <p class="card-title">{{info.description}}</p>
  
   {{#each info.comments as |comment|}}
-    <p class="card-body bg-light" style="font-size: 10px; color:cornflowerblue">{{comment.comment}} Commented By:
-      <b class="text-dark">
-      {{comment.user.username}}
+<div class="card bg-light">
+  <textarea class="card-body" disabled>
+    {{comment.comment}} Commented By:      {{comment.user.username}}       Time:{{formatData comment.createdAt}}
 
-      </b>
-    </p>
 
+  </textarea>
+</div>
+
+
+  
 {{/each}}
     <a href="/post/{{info.id}}" class="btn btn-primary">add comment</a>
   </div>
