--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,4 +1,4 @@
-<form id="signinForm" method="post">
+<form id="signinForm" method="post" style="width: 300px;">
   <div class="imgcontainer">
     <img src="/image/hero_1.jpg" alt="Avatar" class="avatar">
   </div>
